--- a/src/main/resources/templates/server/show.html
+++ b/src/main/resources/templates/server/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Title</title>
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.5/css/bootstrap.min.css}"
@@ -37,13 +37,13 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Price:</label>
+                    <label class="col-sm-2 control-label">ID Application:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${server.idApplication}">ID Application</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 sm-2 control-label">Image URL:</label>
+                    <label class="col-sm-2 sm-2 control-label">Name Server:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${server.nameServer}">Name Server</p>
                     </div>
