--- a/src/main/resources/templates/server/serverform.html
+++ b/src/main/resources/templates/server/serverform.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="row">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-success">Save</button>
             </div>
         </form>
     </div>
