Update ServerRest and created Applications form

--- a/src/main/resources/templates/server/list.html
+++ b/src/main/resources/templates/server/list.html
@@ -32,7 +32,7 @@
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="/server/list">Server</a>
-            <a class="p-2 text-muted" href="#">Application</a>
+            <a class="p-2 text-muted" href="/server/listApplication">Application</a>
             <a class="p-2 text-muted" href="#">Technology</a>
             <a class="p-2 text-muted" href="#">Design</a>
             <a class="p-2 text-muted" href="#">Culture</a>
@@ -40,7 +40,7 @@
     </div>
 
     <div th:if="${not #lists.isEmpty(servers)}">
-        <h2>Product List</h2>
+        <h2>SERVERS</h2>
         <table class="table table-striped">
             <tr>
                 <th>Id</th>
