--- a/src/main/resources/templates/server/show.html
+++ b/src/main/resources/templates/server/show.html
@@ -35,7 +35,7 @@
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="/server/list">Server</a>
             <a class="p-2 text-muted" href="/server/listApplication">Application</a>
-            <a class="p-2 text-muted" href="#">Technology</a>
+            <a class="p-2 text-muted" href="/graph">Technology</a>
             <a class="p-2 text-muted" href="#">Design</a>
             <a class="p-2 text-muted" href="#">Culture</a>
         </nav>
