Created input Graph 2

--- a/src/main/resources/templates/server/list.html
+++ b/src/main/resources/templates/server/list.html
@@ -33,7 +33,7 @@
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="/server/list">Server</a>
             <a class="p-2 text-muted" href="/server/listApplication">Application</a>
-            <a class="p-2 text-muted" href="/graph">Graph</a>
+            <a class="p-2 text-muted" href="/server/graph">Graph</a>
             <a class="p-2 text-muted" href="#">Design</a>
             <a class="p-2 text-muted" href="#">Culture</a>
         </nav>
