Created input Graph 4

--- a/src/main/resources/templates/server/graph.html
+++ b/src/main/resources/templates/server/graph.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <style>
     .node circle {
         cursor: pointer;
@@ -109,3 +110,5 @@
         return nodes;
     }
 </script>
+</body>
+</html>
