--- a/src/main/resources/templates/server/graph.html
+++ b/src/main/resources/templates/server/graph.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <!-- Webpage encoding -->
+    <meta charset="utf-8"/>
+    <!-- Installation viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+    <title>GRAPH</title>
+
+</head>
 <style>
     .node circle {
         cursor: pointer;
